@@ -1,3 +1,8 @@
+2007-02-28  Thomas Wood  <thos@gnome.org>
+
+	* gnome-theme-details.c: (load_theme_names): Replace a deprecated function
+	(color_select), (gnome_theme_details_init): Rename color_select() to gtk_color_scheme_changed()
+
 2007-02-23  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-theme-installer.c: (transfer_done_tarbz2_idle_cb): fix
